--- a/src/app/shared/shared.style.css
+++ b/src/app/shared/shared.style.css
@@ -17,7 +17,7 @@
   width: 100%;
   max-width: 1000px;
   height: 100%;
-  overflow: visible;
+  overflow: hidden;
 }
 
 .filter-div {
